# boilerplate-executable

./: CMakeLists.txt  upp.json
apps/: CMakeLists.txt  example.cpp
include/TBR_NAMESPACE/: SimpleClass.hpp
src/: CMakeLists.txt  SimpleClass.cpp
tests/: CMakeLists.txt
tests/src/: SimpleClassTest.cpp
